# sales-agent

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.front  README.md  Tasty_cofee_data.xlsx  app.py  cleaned_coffee.csv  cleaned_coffee.xlsx  dialogue.py  docker-compose.yml  dump.sql  front.py  main.py  messages_initial.py  model_llm.py  prompts.py  pyproject.toml  pyproject_api.toml  rag-baseline-2.ipynb  rag-baseline.ipynb  rag-baseline_new_upd.ipynb  rag-baseline_working.ipynb  reload_bd.py  req.txt  test_vis.py  text_2_pandas.ipynb  ttpandas.py
api/: companies.py  logs.py  messages.py  models.py  platforms.py  routes.py
db/: core.py  models.py
db_scripts/: init_database.sql
llm_scripts/: dialogue.py  llm_api.py  main.py  model_llm.py  prompts.py  sales_handler.py  ttpandas.py
messages/: cache_ops.py  emai_scripts.py  models.py  telegram_scripts.py
static/: redoc.standalone.js
streamlit/: main.py
