[tool.poetry]
name = "sales-hack"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.32"
python-dotenv = "^1.0.1"
asyncpg = "^0.29.0"
pydantic = "^2.8.2"
fastapi = {extras = ["standart"], version = "^0.112.2"}
uvicorn = "^0.30.6"
streamlit = "^1.38.0"
aioimaplib = "^1.1.0"
aiosmtplib = "^3.0.2"
telethon = "^1.36.0"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
