[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["Ruslan <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
setuptools = "74.1.2"
sqlalchemy = "2.0.34"
python-dotenv = "^1.0.1"
asyncpg = "^0.29.0"
pydantic = "2.9.0"
fastapi = {extras = ["standart"], version = "^0.112.2"}
uvicorn = "^0.30.6"
streamlit = "^1.38.0"
openpyxl = "^3.1.5"
tqdm = "4.66.5"
pgvector = "^0.3.2"
clickhouse-driver = "^0.2.9"
typing-extensions = "4.12.2"
psycopg2-binary = "^2.9.9"
aioimaplib = "^1.1.0"
aiosmtplib = "^3.0.2"
telethon = "^1.36.0"
bs4 = "^0.0.2"
accelerate = "0.34.2"
aiohappyeyeballs = "2.4.0"
aiohttp = "3.10.5"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.4.0"
appnope = "0.1.4"
asttokens = "2.4.1"
attrs = "24.2.0"
certifi = "2024.8.30"
charset-normalizer = "3.3.2"
comm = "0.2.2"
dataclasses-json = "0.6.7"
debugpy = "1.8.5"
decorator = "5.1.1"
diskcache = "5.6.3"
distro = "1.9.0"
executing = "2.1.0"
filelock = "3.15.4"
frozenlist = "1.4.1"
fsspec = "2024.9.0"
gguf = "^0.9.0"
h11 = "0.14.0"
httpcore = "1.0.5"
httpx = "0.27.2"
huggingface-hub = "0.24.6"
idna = "3.8"
ipykernel = "6.29.5"
ipython = "8.27.0"
jedi = "0.19.1"
jinja2 = "3.1.4"
jiter = "0.5.0"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
jupyter-client = "8.6.2"
jupyter-core = "5.7.2"
langchain = "0.2.16"
langchain-community = "0.2.16"
langchain-core = "0.2.38"
langchain-experimental = "0.0.65"
langchain-openai = "0.1.23"
langchain-text-splitters = "0.2.4"
langchain-tools = "0.1.34"
langsmith = "0.1.116"
markupsafe = "2.1.5"
marshmallow = "3.22.0"
matplotlib-inline = "0.1.7"
mpmath = "1.3.0"
multidict = "6.0.5"
mypy-extensions = "1.0.0"
nest-asyncio = "1.6.0"
networkx = "3.3"
numpy = "1.26.4"
openai = "1.44.0"
orjson = "3.10.7"
packaging = "24.1"
pandas = "2.2.2"
parso = "0.8.4"
peft = "0.12.0"
pexpect = "4.9.0"
platformdirs = "4.2.2"
prompt-toolkit = "3.0.47"
psutil = "6.0.0"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
pydantic-core = "2.23.2"
pygments = "2.18.0"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
pyyaml = "6.0.2"
pyzmq = "26.2.0"
regex = "2024.7.24"
requests = "2.32.3"
safetensors = "0.4.5"
sentencepiece = "0.2.0"
six = "1.16.0"
sniffio = "1.3.1"
stack-data = "0.6.3"
sympy = "1.13.2"
tenacity = "8.5.0"
tiktoken = "0.7.0"
tokenizers = "0.19.1"
torch = "2.4.0"
tornado = "6.4.1"
traitlets = "5.14.3"
transformers = "4.44.2"
typing-inspect = "0.9.0"
tzdata = "2024.1"
urllib3 = "2.2.2"
wcwidth = "0.2.13"
yarl = "1.10.0"
python-multipart = "^0.0.9"
sglang = "^0.3.0"
uvloop = "^0.20.0"
vllm = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
